# Ganbare

./: AutoCommit.sh  CMakeCache.txt  CMakeLists.txt  Ganbare.cpp  README.md  client.py  quick_test.sh  test_server.sh
GanbareUI/: GanbareUI.pro  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencvcontroller.cpp  opencvcontroller.h  qtserver.cpp  qtserver.h  res.qrc
GanbareUI/web/: app.js  video.html
console/: CMakeLists.txt  Ganbare.cpp  Install.sh  client.py  test_web.sh
console/web/: app.js  video.html
web/: app.js
